--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "nodemon ./src/index.js",
     "db": "node ./database/make_mockup.js"
   },
   "author": "",
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "nodemon": "^2.0.19"
   }
 }
